# ear-algae

./: Cargo.toml
src/: custom_literal.rs  fmt.rs  lerp.rs  lib.rs  matrix.rs  normal.rs  op_wrapper.rs  ops.rs  prelude.rs  rigid.rs  rotor.rs  vector.rs
src/homogeneous/: mod.rs  vect3.rs
src/lerp/: mod.rs
src/linear/: matrix.rs  mod.rs  normal.rs  ortho.rs  vector.rs
src/rigid/: lin_ang3.rs  mod.rs  rig2.rs  rig3.rs
src/rotor/: cross_product.rs  mod.rs  rot2.rs  rot3.rs
src/traits/: convert.rs  from.rs  impls.rs  mod.rs  ops.rs  restricted.rs
