[package]
name = "ear-algae"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Linear algebra featuring Vectors, Normal Vectors, Matrices, Rotors (Unit Quaternions) and Rigid Transforms (Rotation + Translation)"

[dependencies]
culit = "0.6.1"
maybe-trait = "1.0.0"

bytemuck = { version = "1.23.1", features = ["derive"], optional = true }
lerpify = { version = "1.0.0", optional = true }
serde = { version = "1.0.215", features = ["derive"], optional = true }

[features]
bytemuck = ["dep:bytemuck"]
lerpify = ["dep:lerpify"]
serde = ["dep:serde"]

full = ["bytemuck", "lerpify", "serde"]
